--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 theme: jekyll-theme-minimal
+title: oh hey its just pedi
+description: dont know what to put here yet
 main: idk what to put here yet
